--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "smpp",
-  "version": "0.6.0-rc.4",
+  "version": "0.6.1-rc.4",
   "description": "SMPP client and server implementation in node.js",
-  "homepage": "https://github.com/farhadi/node-smpp",
-  "bugs": "https://github.com/farhadi/node-smpp/issues",
+  "homepage": "https://github.com/brook-digi/node-smpp",
+  "bugs": "https://github.com/brook-digi/node-smpp/issues",
   "author": "Ali Farhadi <a.farhadi@gmail.com>",
   "contributors": [
     "Julián Gutiérrez <juliangut@gmail.com>"
@@ -14,7 +14,7 @@
   "main": "./lib/smpp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/farhadi/node-smpp.git"
+    "url": "https://github.com/brook-digi/node-smpp.git"
   },
   "license": "MIT",
   "files": [
